--- a/app/views/donors/_form.html.erb
+++ b/app/views/donors/_form.html.erb
@@ -140,9 +140,9 @@
       </div>
     </div>
   </div>
-
+  <br/>
   <div class="actions">
-    <%=f.submit 'Submit', class: 'btn btn-success btn-lg btn-block'%>
+    <%=f.submit 'Submit', class: 'snazzybtn snazzybtn-three btn-lg btn-block'%>
    
   </div>
 <% end %>
