--- a/app/views/relationships/_donorsearch.html.erb
+++ b/app/views/relationships/_donorsearch.html.erb
@@ -1,8 +1,12 @@
 
 
 			<div class="modal-header text-center">
-				<h5 class="modal-title" id="modalLabel">
-					<%=  @donor[0].name %> 	<%=image_tag @donor[0].image.url(:medium)%>
+				<h5 class="modal-title text-center" id="modalLabel">
+					
+					<%=  @donor[0].name %> 
+						<br/>
+					<%=image_tag @donor[0].image.url(:medium)%>
+					
 				</h5>
 				
 			    
@@ -15,68 +19,68 @@
 				<div class="container-fluid">
 				  	<div class="row">
 				    	<div class="col-md-4 text-left">Doner ID</div>
-				    	<div class="col-md-8"><%= @donor[0].id%></div>
+				    	<div class="col-md-8 text-right"><%= @donor[0].id%></div>
 				  	</div> 
 				 	 <div class="row">
 				    	<div class="col-md-4 text-left">Gender</div>
-				    	<div class="col-md-8"><%=  @donor[0].age %></div>
+				    	<div class="col-md-8 text-right"><%=  @donor[0].age %></div>
 				 	</div> 
 
 				  	<div class="row">
 				    	<div class="col-md-4 text-left">Race</div>
-				    	<div class="col-md-8"><%= @donor[0].race %></div>
+				    	<div class="col-md-8 text-right"><%= @donor[0].race %></div>
 				  	</div> 
 				  	<div class="row">
 				    	<div class="col-md-4 text-left">Religion</div>
-				    	<div class="col-md-8"><%= @donor[0].religion %></div>
+				    	<div class="col-md-8 text-right"><%= @donor[0].religion %></div>
 				  	</div> 
 				 	<div class="row">
 				    	<div class="col-md-4 text-left">Networth</div>
-				    	<div class="col-md-8"><%= @donor[0].networth %></div>
+				    	<div class="col-md-8 text-right"><%= @donor[0].networth %></div>
 				  	</div>   
 				  	<div class="row">
 					    <div class="col-md-4 text-left">Employer</div>
-					    <div class="col-md-8"><%= @donor[0].employer %></div>
+					    <div class="col-md-8 text-right"><%= @donor[0].employer %></div>
 					</div> 
 					<div class="row">
 					    <div class="col-md-4 text-left">Position</div>
-					    <div class="col-md-8"><%= @donor[0].position %></div>
+					    <div class="col-md-8 text-right"><%= @donor[0].position %></div>
 					</div> 
 					<div class="row">
 					    <div class="col-md-4 text-left">Education</div>
-					    <div class="col-md-8"><%= @donor[0].education %></div>
+					    <div class="col-md-8 text-right"><%= @donor[0].education %></div>
 				  	</div> 
 				  	<div class="row">
 				    	<div class="col-md-4 text-left">Associations</div>
-				    	<div class="col-md-8"><%= @donor[0].associations %></div>
+				    	<div class="col-md-8 text-right"><%= @donor[0].associations %></div>
 				  	</div> 
 				  	<div class="row">
 				    	<div class="col-md-4 text-left">Military</div>
-				    	<div class="col-md-8"><%= @donor[0].military %></div>
+				    	<div class="col-md-8 text-right"><%= @donor[0].military %></div>
 				  	</div> 
 				  	<div class="row">
 				   		<div class="col-md-4 text-left">Location</div>
-				    	<div class="col-md-8"><%= @donor[0].location %></div>
+				    	<div class="col-md-8 text-right"><%= @donor[0].location %></div>
 				  	</div> 
 				  	<div class="row">
 				    	<div class="col-md-4 text-left">Zip</div>
-				    	<div class="col-md-8"><%= @donor[0].zip %></div>
+				    	<div class="col-md-8 text-right"><%= @donor[0].zip %></div>
 				  	</div> 
 				  	<div class="row">
 				    	<div class="col-md-4 text-left">Description</div>
-				    	<div class="col-md-8"><%= @donor[0].description %></div>
+				    	<div class="col-md-8 text-right"><%= @donor[0].description %></div>
 				  	</div> 
 				  	<div class="row">
 				    	<div class="col-md-4 text-left">LifeEvent</div>
-				    	<div class="col-md-8"><%= @donor[0].life_event %></div>
+				    	<div class="col-md-8 text-right"><%= @donor[0].life_event %></div>
 				  	</div> 
 				  	<div class="row">
 				    	<div class="col-md-4 text-left">Donation Goal</div>
-				    	<div class="col-md-8"><%= @donor[0].donation_goal %></div>
+				    	<div class="col-md-8 text-right"><%= @donor[0].donation_goal %></div>
 				  	</div> 
 				  	<div class="row">
 				    	<div class="col-md-4 text-left">Donation YTD</div>
-				    	<div class="col-md-8"><%= @donor[0].donation_YTD %></div>
+				    	<div class="col-md-8 text-right"><%= @donor[0].donation_YTD %></div>
 				  	</div> 
 				  	
 
