--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -225,10 +225,10 @@ body {
 
  
 #donornetwork {
-        width: 90%;
-        height: 800px;
-        border: 1px solid lightgray;
-        position: absolute;
+        width: 100%;
+        height: 900px;
+        // border: 1px solid lightgray;
+       
         top: 0; 
         bottom:0; 
         left: 0; 
@@ -236,3 +236,9 @@ body {
         margin: auto;
 
         }
+
+
+
+// more colorful button
+
+// !more colorful button
