--- a/app/views/donors/new.html.erb
+++ b/app/views/donors/new.html.erb
@@ -3,5 +3,5 @@
 
 	<%= render 'form' %>
 
-	<%= link_to 'Back', donors_path %>
+	<%= link_to 'Back', donors_path,class: "btn snazzybtn snazzybtn-twov1" %>
 </div>
