--- a/app/views/relationships/new.html.erb
+++ b/app/views/relationships/new.html.erb
@@ -38,7 +38,7 @@
 	         </div> -->
 
 	         <div class="modal fade" id="donorInformationModal"  tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-	            <div class="modal-dialog" role="document">
+	            <div class="modal-dialog" role="document" style="width:400px;">
 	               <div class="modal-content">
 	               </div>
 	            </div>
