name autocomplete search in relationships added

--- a/app/views/donors/_form.html.erb
+++ b/app/views/donors/_form.html.erb
@@ -142,7 +142,7 @@
   </div>
   <br/>
   <div class="actions">
-    <%=f.submit 'Submit', class: 'snazzybtn snazzybtn-three btn-lg btn-block'%>
+    <%=f.submit 'Submit', class: 'snazzybtn snazzybtn-threev1 btn-lg btn-block'%>
    
   </div>
 <% end %>
