--- a/app/views/relationships/show.html.erb
+++ b/app/views/relationships/show.html.erb
@@ -215,6 +215,6 @@
 
 
 
-<%= link_to 'Edit', edit_relationship_path(@relationship), class: 'btn btn-primary' %> 
-<%= link_to 'Back', relationships_path, class: 'btn btn-danger' %>
+<%= link_to 'Edit', edit_relationship_path(@relationship), class: 'btn snazzybtn snazzybtn-onev1' %> 
+<%= link_to 'Back', relationships_path, class: 'btn snazzybtn snazzybtn-twov1' %>
 </div> <!-- container -->
