--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -13,7 +13,7 @@
 
       <span class="useremail"><%= current_user.email %></span>
 
-      <%= link_to "logout", destroy_user_session_path, class: "btn btn-danger btn-sm",method: :delete %>
+      <%= link_to "logout", destroy_user_session_path, class: "btn snazzybtn snazzybtn-five-sm",method: :delete %>
     </div>
 	</div>
 
