--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -375,6 +375,87 @@ $orange: #e67e22;
   }
 }
 
+.snazzybtn-one-sm-orange {
+  font-family: 'lato';
+  font-size: 0.6rem;
+  background: none;
+  border: 0.175em solid $whitegrey;
+  padding: 1em 1em;
+  color: $whitegrey;
+  text-transform: uppercase;
+  letter-spacing: 0.25em;
+  border-radius: 0.5em;
+  cursor: pointer;
+  &:focus {
+    outline: none;
+  }
+  border-color: $orange;
+  color: $darkgrey;
+  box-shadow: 0 0 0 0 $orange,
+    inset 0 0 200px 28px $orange;
+  transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
+  &:hover {
+  box-shadow: 0 0 40px 0 $orange,
+    inset 0 0 25px 0 $orange;
+  color: $orange;
+  }
+}
+
+.snazzybtn-one-sm-blue {
+  font-family: 'lato';
+  font-size: 0.6rem;
+  background: none;
+  border: 0.175em solid $whitegrey;
+  padding: 1em 1.1em;
+  color: $whitegrey;
+  text-transform: uppercase;
+  letter-spacing: 0.25em;
+  border-radius: 0.5em;
+  cursor: pointer;
+  &:focus {
+    outline: none;
+  }
+  border-color: $blue;
+  color: $darkgrey;
+  box-shadow: 0 0 0 0 $blue,
+    inset 0 0 200px 28px $blue;
+  transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
+  &:hover {
+  box-shadow: 0 0 40px 0 $blue,
+    inset 0 0 25px 0 $blue;
+  color: $blue;
+  }
+}
+
+.snazzybtn-one-sm-red {
+  font-family: 'lato';
+  font-size: 0.6rem;
+  background: none;
+  border: 0.175em solid $whitegrey;
+  padding: 1em 1em;
+  color: $whitegrey;
+  text-transform: uppercase;
+  letter-spacing: 0.25em;
+  border-radius: 0.5em;
+  cursor: pointer;
+  &:focus {
+    outline: none;
+  }
+  border-color: $red;
+  color: $darkgrey;
+  box-shadow: 0 0 0 0 $red,
+    inset 0 0 200px 28px $red;
+  transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
+  &:hover {
+  box-shadow: 0 0 40px 0 $red,
+    inset 0 0 25px 0 $red;
+  color: $red;
+  }
+}
+
+
+
+
 .snazzybtn-onev1 {
   border-color: $blue;
   color: $darkgrey;
@@ -424,6 +505,36 @@ $orange: #e67e22;
     }
   }
 }
+
+
+.snazzybtn-threev1 {
+  font-family: 'lato';
+  font-size: 1.1rem;
+  background: none;
+  border: 0.175em solid $whitegrey;
+  padding: 0.9em 0.9em;
+  color: $whitegrey;
+  text-transform: uppercase;
+  letter-spacing: 0.25em;
+  border-radius: 0.5em;
+  cursor: pointer;
+  &:focus {
+    outline: none;
+  }
+  border-color: $turquoise;
+  color: $whitegrey;
+  background:{
+    image: linear-gradient(45deg, $turquoise, transparent);
+    position: 75%;
+    size: 200%;
+  }
+  transition: background 300ms ease-in-out;
+  &:hover {
+    background:{
+      position: 0%;
+    }
+  }
+}
 // Button 4
 .snazzybtn-four {
   border-color: $red;
@@ -456,6 +567,36 @@ $orange: #e67e22;
       position: 0 -50%;
     }
     box-shadow: 0 0 40px 0 $orange;
+  }
+}
+
+.snazzybtn-five-sm{
+  font-family: 'lato';
+  font-size: 0.6rem;
+  background: none;
+  border: 0.175em solid $whitegrey;
+  padding: 0.8em 0.8em;
+  color: $whitegrey;
+  text-transform: uppercase;
+  letter-spacing: 0.25em;
+  border-radius: 0.5em;
+  cursor: pointer;
+  &:focus {
+    outline: none;
+  }
+  border-color: $red;
+  background:{
+    image: linear-gradient(0deg, transparent 50%, $red 50%);
+    position: 0 -100%;
+    size: 500%;
+  }
+  transition: background 500ms ease-in-out, color 500ms ease-in-out, box-shadow 500ms ease-in-out;
+  &:hover {
+    color: $red;
+    background:{
+      position: 0 -50%;
+    }
+    box-shadow: 0 0 50px 0 $red;
   }
 }
 // ! snazzy button
