--- a/app/views/relationships/_form.html.erb
+++ b/app/views/relationships/_form.html.erb
@@ -24,6 +24,6 @@
     <%= f.text_field :link_description, class: "form-control" %>
   </div>
   <div class="actions">
-    <%=f.submit 'Submit', class: 'btn btn-success btn-lg btn-block'%>
+    <%=f.submit 'Submit', class: 'snazzybtn-threev1 btn-lg btn-block'%>
   </div>
 <% end %>
