--- a/app/views/relationships/edit.html.erb
+++ b/app/views/relationships/edit.html.erb
@@ -1,3 +1,4 @@
+
 <div class="container">
 	<h1>Editing Relationship</h1>
 	<div class="row">
@@ -26,8 +27,21 @@
           
        
         <!-- !search form -->
-        <br/>
-        <br/>
+         <br/>
+
+         <!-- search name -->
+         <%= form_tag(searchdonor_path, :method => "get", remote: true) do %>
+            <%= text_field_tag :donornameautocomplete,  params[:donornameautocomplete],  placeholder: "Please Enter Donor Name" ,class: "searchinputwithoutanimation", data: {autocomplete_source: @autocompletenames}%>
+
+            <%#= submit_tag "Search",:class => "btn btn-success" %>
+            <%= button_tag(type: "submit", class: "btn transparent_button", id: "searchdonorbtn") do %>
+                <i class="fa fa-lg fa-search searchicon"></i>
+            <% end %>
+          
+         <% end %>
+      <!-- !search name -->
+
+         <br/>
 
 
 
@@ -35,12 +49,12 @@
            
          </div> -->
 
-         <div class="modal fade" id="donorInformationModal"  tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document" style="width:400px;">
-               <div class="modal-content">
-               </div>
+        <div class="modal fade" id="donorInformationModal"  tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document" style="width:400px;">
+            <div class="modal-content">
             </div>
-         </div>
+          </div>
+        </div>
 
 
 
@@ -50,13 +64,27 @@
    </div>
 
 
-	<%= link_to 'Show', @relationship, class: "btn btn-info" %> 
-	<%= link_to 'Back', relationships_path, class: "btn btn-warning" %>
+
+
+       
+
+              
+         
+  
+            
+          
+       
+
+
+
+	<%= link_to 'Show', @relationship, class: "btn snazzybtn snazzybtn-onev1" %> 
+	<%= link_to 'Back', relationships_path, class: "btn snazzybtn snazzybtn-twov1" %>
 
 
 
 
 </div>
+
 <script>
 // $('#searchdonorbtn').click(function(params) {
 
