--- a/app/views/relationships/index.html.erb
+++ b/app/views/relationships/index.html.erb
@@ -53,7 +53,7 @@
       
             
         <%= form_tag(relationships_path, :method => "get", id: "search-form") do %>
-          <%= text_field_tag :donorname, params[:donorname], placeholder: "Donor Name" ,class: "searchinput"%>
+          <%= text_field_tag :donorname, params[:donorname], placeholder: "Donor Name" ,class: "searchinput",data: {autocomplete_source: autocompletenames_path}%>
 
           <%#= submit_tag "Search",:class => "btn btn-success" %>
           <%= button_tag(type: "submit", class: "btn transparent_button") do %>
